Use environment variable for CORS configuration